--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "Shareloc",
-  "version": "0.14.0",
-  "description": "Shareloc - the free and open map API based on OpenLayers 3.",
+  "version": "0.16.0",
+  "description": "Shareloc - the free and open map API based on OpenLayers.",
   "repository": "https://github.com/meggsimum/shareloc.git",
-  "license": "https://github.com/meggsimum/shareloc/blob/master/LICENSE",
+  "license" : "SEE LICENSE IN https://github.com/meggsimum/shareloc/blob/master/LICENSE",
   "readme": "README.md",
+  "devDependencies": {
+    "bootstrap": "3.3.7",
+    "jquery": "2.2.4",
+    "openlayers": "^4.6.4"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
@@ -12,9 +17,6 @@
     "grunt-contrib-jshint": "^0.11.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-preprocess": "^4.1.0",
-    "grunt-contrib-connect": "^0.11.2",
-    "bootstrap": "3.3.6",
-    "jquery": "1.12.0",
-    "openlayers": "4.2.0"
+    "grunt-contrib-connect": "^0.11.2"
   }
 }
